--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "strictNullChecks": true,
+    "target": "es6",
     "outDir": "build/"
   },
   "include": [
