--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "bitcoin-treasure-hunt",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/src/index.js",
+  "types": ["./src/bitcore.d.ts"],
   "scripts": {
     "test": "tsc; mocha build/test"
   },
