--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/bluebird": "^3.0.35",
     "@types/lodash": "^4.14.38",
     "bitcore-explorers": "^1.0.1",
-    "bitcore-lib": "^0.13.19",
+    "bitcore-lib": "git+https://github.com/eordano/bitcore-lib.git",
     "bluebird": "^3.4.6",
     "lodash": "^4.16.6",
     "qrcode-terminal": "^0.11.0"
